pkl-core/src/test/files/LanguageSnippetTests/input/errors/abstractMethodNotImplemented2.pkl
abstract class AbstractMethods {
  abstract function foo(): Int
  abstract function bar(): Int
}

class MyClass extends AbstractMethods {
}

foo: MyClass
